smr-argo-app-new/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-same-namespaces
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-nginx-ingress
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network-policy: ingress
  podSelector: {}
  policyTypes:
  - Ingress
